--- a/2022/requirements.txt
+++ b/2022/requirements.txt
@@ -1,4 +1,5 @@
-# requirements.txt
-#!pip install gspread
-#gspread==5.1.1
-oauth2client==4.1.3
+gspread==4.0.1
+numpy==1.22.0
+pandas==1.3.5
+protobuf==3.19.3
+streamlit==1.3.1
