--- a/NFL_conda_environment.yml
+++ b/NFL_conda_environment.yml
@@ -1,19 +1,21 @@
-name: NFL_conda_env
+name: NFL_env24
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - numpy=1.19.2
+  - python=3.8.8
+  - numpy
   - scipy
   - pandas
   - matplotlib
   - pip 
   - pip:
-    - gspread>=4.0.1
-    - google-auth>=2.25.2
-    - pytz>=2020.1
-    - protobuf>=3.19.3
-    - streamlit>=1.3.1
-    - urllib3==1.26.7 
-    - beautifulsoup4==4.12.2
-    # - lxml==5.0.0
+    - gspread #>=4.0.1
+    - google-auth #>=2.25.2
+    - pytz #>=2020.1
+    - protobuf #>=3.19.3
+    - streamlit #>=1.27.0
+    - watchdog
+    - urllib3 #==1.26.7 
+    - beautifulsoup4 #==4.12.2
+    - lxml==5.0.0
