updated requirments.txt with ==

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,91 +1,91 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: osx-64
-altair=5.2.0=pypi_0
-attrs=23.2.0=pypi_0
-backports-zoneinfo=0.2.1=pypi_0
-beautifulsoup4=4.12.2=pypi_0
-blinker=1.7.0=pypi_0
-brotli=1.1.0=h0dc2134_1
-brotli-bin=1.1.0=h0dc2134_1
-brotli-python=1.1.0=py38h940360d_1
-ca-certificates=2023.11.17=h8857fd0_0
-cachetools=5.3.2=pypi_0
-certifi=2023.11.17=pyhd8ed1ab_0
-charset-normalizer=3.3.2=pyhd8ed1ab_0
-click=8.1.7=pypi_0
-contourpy=1.1.1=py38h15a1a5b_1
-cycler=0.12.1=pyhd8ed1ab_0
-fonttools=4.47.0=py38hae2e43d_0
-freetype=2.12.1=h60636b9_2
-gitdb=4.0.11=pypi_0
-gitpython=3.1.40=pypi_0
-google-auth=2.26.1=pypi_0
-google-auth-oauthlib=1.2.0=pypi_0
-gspread=5.12.4=pypi_0
-idna=3.6=pyhd8ed1ab_0
-importlib-metadata=6.11.0=pypi_0
-importlib-resources=6.1.1=pyhd8ed1ab_0
-importlib_resources=6.1.1=pyhd8ed1ab_0
-jinja2=3.1.2=pypi_0
-jsonschema=4.20.0=pypi_0
-jsonschema-specifications=2023.12.1=pypi_0
-kiwisolver=1.4.5=py38h15a1a5b_1
-lcms2=2.16=ha2f27b4_0
-lerc=4.0.0=hb486fe8_0
-libblas=3.9.0=20_osx64_openblas
-libbrotlicommon=1.1.0=h0dc2134_1
-libbrotlidec=1.1.0=h0dc2134_1
-libbrotlienc=1.1.0=h0dc2134_1
-libcblas=3.9.0=20_osx64_openblas
-libcxx=16.0.6=hd57cbcb_0
-libdeflate=1.19=ha4e1b8e_0
-libffi=3.3=h046ec9c_2
-libgfortran=5.0.0=13_2_0_h97931a8_1
-libgfortran5=13.2.0=h2873a65_1
-libjpeg-turbo=3.0.0=h0dc2134_1
-liblapack=3.9.0=20_osx64_openblas
-libopenblas=0.3.25=openmp_hfef2a42_0
-libpng=1.6.39=ha978bb4_0
-libsqlite=3.44.2=h92b6c6a_0
-libtiff=4.6.0=h684deea_2
-libwebp-base=1.3.2=h0dc2134_0
-libxcb=1.15=hb7f2c08_0
-libzlib=1.2.13=h8a1eda9_5
-llvm-openmp=17.0.6=hb6ac08f_0
-lxml=5.0.0=pypi_0
-markdown-it-py=3.0.0=pypi_0
-markupsafe=2.1.3=pypi_0
-matplotlib=3.7.3=py38h50d1736_0
-matplotlib-base=3.7.3=py38hcd1b199_0
-mdurl=0.1.2=pypi_0
-munkres=1.1.4=pyh9f0ad1d_0
-ncurses=6.4=h93d8f39_2
-numpy=1.24.4=py38h9a4a08f_0
-oauthlib=3.2.2=pypi_0
-openjpeg=2.5.0=ha4da562_3
-openssl=1.1.1w=h8a1eda9_0
-packaging=23.2=pyhd8ed1ab_0
-pandas=2.0.3=py38h78e6021_1
-pillow=10.2.0=py38h0024655_0
-pip=23.3.2=pyhd8ed1ab_0
-pkgutil-resolve-name=1.3.10=pypi_0
-platformdirs=4.1.0=pyhd8ed1ab_0
-pooch=1.8.0=pyhd8ed1ab_0
-protobuf=4.25.1=pypi_0
-pthread-stubs=0.4=hc929b4f_1001
-pyarrow=14.0.2=pypi_0
-pyasn1=0.5.1=pypi_0
-pyasn1-modules=0.3.0=pypi_0
-pydeck=0.8.1b0=pypi_0
-pygments=2.17.2=pypi_0
-pyparsing=3.1.1=pyhd8ed1ab_0
-pysocks=1.7.1=pyha2e5f31_6
-python=3.8.8=h4e93d89_0_cpython
-python-dateutil=2.8.2=pyhd8ed1ab_0
-python-tzdata=2023.4=pyhd8ed1ab_0
-python_abi=3.8=4_cp38
-pytz=2023.3.post1=pyhd8ed1ab_0
+altair==5.2.0=pypi_0
+attrs==23.2.0=pypi_0
+backports-zoneinfo==0.2.1=pypi_0
+beautifulsoup4==4.12.2=pypi_0
+blinker==1.7.0=pypi_0
+brotli==1.1.0=h0dc2134_1
+brotli-bin==1.1.0=h0dc2134_1
+brotli-python==1.1.0=py38h940360d_1
+ca-certificates==2023.11.17=h8857fd0_0
+cachetools==5.3.2=pypi_0
+certifi==2023.11.17=pyhd8ed1ab_0
+charset-normalizer==3.3.2=pyhd8ed1ab_0
+click==8.1.7=pypi_0
+contourpy==1.1.1=py38h15a1a5b_1
+cycler==0.12.1=pyhd8ed1ab_0
+fonttools==4.47.0=py38hae2e43d_0
+freetype==2.12.1=h60636b9_2
+gitdb==4.0.11=pypi_0
+gitpython==3.1.40=pypi_0
+google-auth==2.26.1=pypi_0
+google-auth-oauthlib==1.2.0=pypi_0
+gspread==5.12.4=pypi_0
+idna==3.6=pyhd8ed1ab_0
+importlib-metadata==6.11.0=pypi_0
+importlib-resources==6.1.1=pyhd8ed1ab_0
+importlib_resources==6.1.1=pyhd8ed1ab_0
+jinja2==3.1.2=pypi_0
+jsonschema==4.20.0=pypi_0
+jsonschema-specifications==2023.12.1=pypi_0
+kiwisolver==1.4.5=py38h15a1a5b_1
+lcms2==2.16=ha2f27b4_0
+lerc==4.0.0=hb486fe8_0
+libblas==3.9.0=20_osx64_openblas
+libbrotlicommon==1.1.0=h0dc2134_1
+libbrotlidec==1.1.0=h0dc2134_1
+libbrotlienc==1.1.0=h0dc2134_1
+libcblas==3.9.0=20_osx64_openblas
+libcxx==16.0.6=hd57cbcb_0
+libdeflate==1.19=ha4e1b8e_0
+libffi==3.3=h046ec9c_2
+libgfortran==5.0.0=13_2_0_h97931a8_1
+libgfortran5==13.2.0=h2873a65_1
+libjpeg-turbo==3.0.0=h0dc2134_1
+liblapack==3.9.0=20_osx64_openblas
+libopenblas==0.3.25=openmp_hfef2a42_0
+libpng==1.6.39=ha978bb4_0
+libsqlite==3.44.2=h92b6c6a_0
+libtiff==4.6.0=h684deea_2
+libwebp-base==1.3.2=h0dc2134_0
+libxcb==1.15=hb7f2c08_0
+libzlib==1.2.13=h8a1eda9_5
+llvm-openmp==17.0.6=hb6ac08f_0
+lxml==5.0.0=pypi_0
+markdown-it-py==3.0.0=pypi_0
+markupsafe==2.1.3=pypi_0
+matplotlib==3.7.3=py38h50d1736_0
+matplotlib-base==3.7.3=py38hcd1b199_0
+mdurl==0.1.2=pypi_0
+munkres==1.1.4=pyh9f0ad1d_0
+ncurses==6.4=h93d8f39_2
+numpy==1.24.4=py38h9a4a08f_0
+oauthlib==3.2.2=pypi_0
+openjpeg==2.5.0=ha4da562_3
+openssl==1.1.1w=h8a1eda9_0
+packaging==23.2=pyhd8ed1ab_0
+pandas==2.0.3=py38h78e6021_1
+pillow==10.2.0=py38h0024655_0
+pip==23.3.2=pyhd8ed1ab_0
+pkgutil-resolve-name==1.3.10=pypi_0
+platformdirs==4.1.0=pyhd8ed1ab_0
+pooch==1.8.0=pyhd8ed1ab_0
+protobuf==4.25.1=pypi_0
+pthread-stubs==0.4=hc929b4f_1001
+pyarrow==14.0.2=pypi_0
+pyasn1==0.5.1=pypi_0
+pyasn1-modules==0.3.0=pypi_0
+pydeck==0.8.1b0=pypi_0
+pygments==2.17.2=pypi_0
+pyparsing==3.1.1=pyhd8ed1ab_0
+pysocks==1.7.1=pyha2e5f31_6
+python==3.8.8=h4e93d89_0_cpython
+python-dateutil==2.8.2=pyhd8ed1ab_0
+python-tzdata==2023.4=pyhd8ed1ab_0
+python_abi==3.8=4_cp38
+pytz==2023.3.post1=pyhd8ed1ab_0
 readline=8.2=h9e318b2_1
 referencing=0.32.1=pypi_0
 requests=2.31.0=pyhd8ed1ab_0
