--- a/requirements.txt
+++ b/requirements.txt
@@ -3,72 +3,72 @@ attrs==23.2.0
 backports.zoneinfo==0.2.1
 beautifulsoup4==4.12.2
 blinker==1.7.0
-Brotli @ file:///Users/runner/miniforge3/conda-bld/brotli-split_1695989838345/work
+Brotli
 cachetools==5.3.2
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1700303426725/work/certifi
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1698833585322/work
+certifi
+charset-normalizer
 click==8.1.7
-contourpy @ file:///Users/runner/miniforge3/conda-bld/contourpy_1695554168112/work
-cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1696677705766/work
-fonttools @ file:///Users/runner/miniforge3/conda-bld/fonttools_1702929736262/work
+contourpy
+cycler
+fonttools
 gitdb==4.0.11
 GitPython==3.1.40
 google-auth==2.26.1
 google-auth-oauthlib==1.2.0
 gspread==5.12.4
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1701026962277/work
+idna
 importlib-metadata==6.11.0
-importlib-resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1699364556997/work
+importlib-resources
 Jinja2==3.1.2
 jsonschema==4.20.0
 jsonschema-specifications==2023.12.1
-kiwisolver @ file:///Users/runner/miniforge3/conda-bld/kiwisolver_1695380057728/work
+kiwisolver
 lxml==5.0.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
-matplotlib @ file:///Users/runner/miniforge3/conda-bld/matplotlib-suite_1695076714691/work
+matplotlib
 mdurl==0.1.2
 munkres==1.1.4
 nltk==3.6.7
-numpy @ file:///Users/runner/miniforge3/conda-bld/numpy_1687808486671/work
+numpy
 oauthlib==3.2.2
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1696202382185/work
-pandas @ file:///Users/runner/miniforge3/conda-bld/pandas_1688740674210/work
-pillow @ file:///Users/runner/miniforge3/conda-bld/pillow_1704252267770/work
+packaging
+pandas
+pillow
 pkgutil_resolve_name==1.3.10
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1701708255999/work
-pooch @ file:///home/conda/feedstock_root/build_artifacts/pooch_1698245576425/work
+platformdirs
+pooch
 protobuf==4.25.1
 pyarrow==14.0.2
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pydeck==0.8.1b0
 Pygments==2.17.2
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1690737849915/work
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1693930252784/work
+pyparsing
+PySocks
+python-dateutil
+pytz
 referencing==0.32.1
 regex==2021.11.10
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1684774241324/work
+requests
 requests-oauthlib==1.3.1
 rich==13.7.0
 rpds-py==0.16.2
 rsa==4.9
-scipy @ file:///Users/runner/miniforge3/conda-bld/scipy-split_1683900581187/work/base/dist/scipy-1.10.1-cp38-cp38-macosx_10_9_x86_64.whl#sha256=f4fb7d72dc3a29875e19159256e787592fa2980225a1ed18d7555bf50366f719
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+scipy
+six
 smmap==5.0.1
 soupsieve==2.5
 streamlit==1.29.0
 tenacity==8.2.3
 toml==0.10.2
 toolz==0.12.0
-tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1695373594041/work
+tornado
 typing_extensions==4.9.0
-tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1703878702368/work
+tzdata
 tzlocal==5.2
-unicodedata2 @ file:///Users/runner/miniforge3/conda-bld/unicodedata2_1695847974287/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1699933488691/work
+unicodedata2
+urllib3
 validators==0.22.0
 watchdog==3.0.0
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
+zipp
