--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ Pygments==2.17.2
 pyparsing
 PySocks
 python-dateutil
+python-Levenshtein
 pytz
 referencing==0.32.1
 regex==2021.11.10
@@ -61,6 +62,7 @@ smmap==5.0.1
 soupsieve==2.5
 streamlit==1.29.0
 tenacity==8.2.3
+thefuzz
 toml==0.10.2
 toolz==0.12.0
 tornado
