--- a/yearly_settings.json
+++ b/yearly_settings.json
@@ -7,7 +7,13 @@
             "starting_NFC": ["SF", "DAL", "DET", "TB", "PHI", "LAR", "GB"],
             "starting_AFC": ["BAL", "BUF", "KC", "HOU", "CLE", "MIA", "PIT"],
             "alive_NFC": ["SF", "DET"],
-            "alive_AFC": ["BAL", "KC"]
+            "alive_AFC": ["BAL", "KC"],
+            "week_info": {"Wild Card": {"week_num": 1, "start_date": "Jan 13, 2024"},
+                        "Divisional": {"week_num": 2, "start_date": "Jan 20, 2024"},
+                        "Conference": {"week_num": 3, "start_date": "Jan 28, 2024"},
+                        "Super Bowl": {"week_num": 4, "start_date": "Feb 11, 2024"}
+                    }
+            }
         },
         "2022": {
             "start_date_deadline_pst": "Jan 15, 2022 1:30 PM",
