update JSONs after championship round

--- a/yearly_settings.json
+++ b/yearly_settings.json
@@ -6,8 +6,8 @@
             "buy_in": "$10",
             "starting_NFC": ["SF", "DAL", "DET", "TB", "PHI", "LAR", "GB"],
             "starting_AFC": ["BAL", "BUF", "KC", "HOU", "CLE", "MIA", "PIT"],
-            "alive_NFC": ["SF", "DET"],
-            "alive_AFC": ["BAL", "KC"],
+            "alive_NFC": ["SF"],
+            "alive_AFC": ["KC"],
             "week_info": {"Wild Card": {"week_num": 1, "start_date": "Jan 13, 2024"},
                         "Divisional": {"week_num": 2, "start_date": "Jan 20, 2024"},
                         "Conference": {"week_num": 3, "start_date": "Jan 28, 2024"},
