--- a/yearly_settings.json
+++ b/yearly_settings.json
@@ -4,10 +4,10 @@
             "start_date_deadline_pst": "Jan 11, 2025 1:30 PM",
             "roster_google_sheet_name": "2025_Rosters",
             "buy_in": "$10",
-            "starting_NFC": ["DET", "PHI", "LAR", "TB", "MIN", "GB", "WAS"],
-            "starting_AFC": ["KC", "BUF", "BAL", "HOU", "PIT", "LAC", "?"],
-            "alive_NFC": ["DET", "PHI", "LAR", "TB", "MIN", "GB", "WAS"],
-            "alive_AFC":["KC", "BUF", "BAL", "HOU", "PIT", "LAC", "?"],
+            "starting_NFC": ["DET", "PHI", "LAR", "TB", "MIN", "WAS", "GB"],
+            "starting_AFC": ["KC", "BUF", "BAL", "HOU", "PIT", "LAC", "DEN"],
+            "alive_NFC": ["DET", "PHI", "LAR", "TB", "MIN", "WAS", "GB"],
+            "alive_AFC": ["KC", "BUF", "BAL", "HOU"],
             "week_info": {"Wild Card": {"week_num": 1, "start_date": "Jan 11, 2025"},
                         "Divisional": {"week_num": 2, "start_date": "Jan 18, 2025"},
                         "Conference": {"week_num": 3, "start_date": "Jan 26, 2025"},
