--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ package-mode = false
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 streamlit = "^1.41.0"
+streamlit-aggrid = "^1.0.5"
 numpy = "^2.2.1"
 pandas = "^2.2.3"
 gspread = "^6.1.4"
