added  divisional scoring + cleaned up Keon Coleman in PATs

--- a/yearly_settings.json
+++ b/yearly_settings.json
@@ -6,8 +6,8 @@
             "buy_in": "$10",
             "starting_NFC": ["DET", "PHI", "LAR", "TB", "MIN", "WAS", "GB"],
             "starting_AFC": ["KC", "BUF", "BAL", "HOU", "PIT", "LAC", "DEN"],
-            "alive_NFC": ["PHI", "LAR", "WAS"],
-            "alive_AFC": ["KC", "BUF", "BAL"],
+            "alive_NFC": ["PHI", "WAS"],
+            "alive_AFC": ["KC", "BUF"],
             "week_info": {"Wild Card": {"week_num": 1, "start_date": "Jan 11, 2025"},
                         "Divisional": {"week_num": 2, "start_date": "Jan 18, 2025"},
                         "Conference": {"week_num": 3, "start_date": "Jan 26, 2025"},
