--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,9 @@
 [browser]
 gatherUsageStats = false
+
+[theme]
+
+backgroundColor = "#f5cccb"           # blushy off-white
+secondaryBackgroundColor = "#f2a4a2"  # cards
+textColor = "#1F2937"                 # charcoal
+font = "sans serif"
