I can't figure out how to give Rashid Shaheed his points for his return but otherwise, we're ready for Conference Championships

--- a/yearly_settings.json
+++ b/yearly_settings.json
@@ -6,8 +6,8 @@
             "buy_in": "$10",
             "starting_NFC": ["SF", "CHI", "PHI", "CAR", "SEA", "LAR", "GB"],
             "starting_AFC": ["DEN", "NE", "JAX", "PIT", "HOU", "BUF", "LAC"],
-            "alive_NFC": ["SF", "CHI", "SEA", "LAR"],
-            "alive_AFC": ["DEN", "NE", "HOU", "BUF"],
+            "alive_NFC": ["SEA", "LAR"],
+            "alive_AFC": ["DEN", "NE"],
             "week_info": {"Wild Card": {"week_num": 1, "start_date": "Jan 10, 2026"},
                         "Divisional": {"week_num": 2, "start_date": "Jan 17, 2026"},
                         "Conference": {"week_num": 3, "start_date": "Jan 25, 2026"},
